cambios en controladores